Issue #1481296: (again!) Make conversion of a float NaN to an int or long raise ValueError instead of returning 0.  Also, change the error message for conversion of an infinity to an integer, replacing 'long' by 'integer', so that it's appropriate for both long(float('inf')) and int(float('inf')).